--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
----
-layout: layout
-title: "Posts"
----
+<!DOCTYPE html> 
+<html> 
+  <head> 
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=8"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Days with Shanyi</title> 
+    <link rel="stylesheet" href="style.css" media="all"> 
+    <script src="jquery-1.8.3.min.js" type="text/javascript"></script> 
+    <script src="script.js" type="text/javascript"></script> 
+  </head> 
+  <body> 
+	<div class="curl"></div>
+    <div class="container">
+      <div class="days">
+        <span class="days-number">520</span>
+      </div>
+	  <div class="days-label">
+		  DAYS
+	  </div>
+      <div class="seconds">
+        00:09:27
+      </div>
+	  <div class="text">
+		  with Shanyi
+	  </div>	  
+    </div>
+	<footer>
+		Design by <a href="http://huang-ziwei.com">Huang Ziwei</a> | Inspired by <a href="http://lovett.cc">Lovett.cc</a> | Watch this page on <a href="https://github.com/huangziwei/dayswithshanyi/tree/gh-pages">Github
+	</footer>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-<section class="content">
-  <ul class="listing">
-    {% for post in site.posts %}
-    <li>
-      <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-    {% endfor %}
-  </ul>
-</section>
+      ga('create', 'UA-39790941-1', 'huang-ziwei.com');
+      ga('send', 'pageview');
+
+    </script>
+	
+  </body> 
+
+</html>
