--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=8"> 
     <title>Since The Day</title> 
-    <link rel="stylesheet" href="style.css" media="all"> 
-    <script src="jquery-1.8.3.min.js" type="text/javascript"></script> 
-    <script src="script.js" type="text/javascript"></script> 
+    <link rel="stylesheet" href="css/style.css" media="all"> 
+    <script src="js/jquery-1.8.3.min.js" type="text/javascript"></script> 
+    <script src="js/script.js" type="text/javascript"></script> 
     <!--[if lte IE 7]>
     <script type="text/javascript" src="/static/js/degrade.js"></script>
     <![endif]--> 
