--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head> 
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=8"> 
-    <title>Since The Day</title> 
+    <title>Days with YinYin</title> 
     <link rel="stylesheet" href="css/style.css" media="all"> 
     <script src="js/jquery-1.8.3.min.js" type="text/javascript"></script> 
     <script src="js/script.js" type="text/javascript"></script> 
