--- a/index.html
+++ b/index.html
@@ -14,13 +14,25 @@
   </head> 
   <body> 
     <div class="container">
+      
       <div class="days">
         <span class="days-number">2010</span>
         <span class="days-label">days</span>
       </div>
-      <div class="seconds">
-        00:09:27
+
+      <div>
+        <span class="hours"></span>
+        <span class="hours-label">hours</span>
+        <span class="minutes"></span>
+        <span class="minutes-label">minutes</span>
+        <span class="seconds"></span>
+        <span class="seconds-label">seconds</span>
       </div>
+
+      <div>
+        <p>with 媳妇儿儿儿</p>
+      </div>
+      
     </div>
   </body> 
 </html>
