--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       
       <div class="days">
         <span class="days-number">2010</span>
-        <span class="days-label">days</span>
+        <span class="days-label">DAYS</span>
       </div>
 
       <div>
@@ -29,8 +29,10 @@
         <span class="seconds-label">seconds</span>
       </div>
 
-      <div>
-        <p>with 媳妇儿儿儿</p>
+      <div class="text">
+                <span><img src="bg.png" alt=""></span>
+
+        <p>with you, my dear wife r r r and kid's mother!</p>
       </div>
       
     </div>
